<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/selection_view"
        style="@style/ShortPeriodPickerSelectionView"
        app:layout_constraintBottom_toBottomOf="@id/march_title"
        app:layout_constraintEnd_toStartOf="@id/half_year_1_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/january_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/january_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/january"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_1_divider"
        app:layout_constraintTop_toTopOf="parent"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/february_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/february"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_1_divider"
        app:layout_constraintTop_toBottomOf="@+id/january_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/march_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/march"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_1_divider"
        app:layout_constraintTop_toBottomOf="@+id/february_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/april_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/april"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_2_divider"
        app:layout_constraintTop_toBottomOf="@+id/march_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/may_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/may"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_2_divider"
        app:layout_constraintTop_toBottomOf="@+id/april_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/june_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/june"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_2_divider"
        app:layout_constraintTop_toBottomOf="@+id/may_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/july_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/july"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_3_divider"
        app:layout_constraintTop_toBottomOf="@+id/june_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/august_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/august"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_3_divider"
        app:layout_constraintTop_toBottomOf="@+id/july_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/september_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/september"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_3_divider"
        app:layout_constraintTop_toBottomOf="@+id/august_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/october_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/october"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_4_divider"
        app:layout_constraintTop_toBottomOf="@+id/september_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/november_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/november"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_4_divider"
        app:layout_constraintTop_toBottomOf="@+id/october_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/december_title"
        style="@style/ShortPeriodPickerFirstColumnSbisTextView"
        android:text="@string/december"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quarter_4_divider"
        app:layout_constraintTop_toBottomOf="@+id/november_title"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/quarter_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="quarter_1_divider,quarter_2_divider,quarter_3_divider,quarter_4_divider,
        quarter_1_title,quarter_2_title,quarter_3_title,quarter_4_title"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/quarter_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="quarter_1_divider,quarter_2_divider,quarter_3_divider,quarter_4_divider,
        quarter_1_title,quarter_2_title,quarter_3_title,quarter_4_title"/>

    <View
        android:id="@+id/quarter_1_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/march_title"
        app:layout_constraintEnd_toStartOf="@id/quarter_1_title"
        app:layout_constraintTop_toTopOf="@id/january_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/quarter_1_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_1"
        app:layout_constraintBottom_toBottomOf="@id/march_title"
        app:layout_constraintEnd_toStartOf="@+id/half_year_barrier"
        app:layout_constraintTop_toTopOf="@id/january_title"/>

    <View
        android:id="@+id/quarter_2_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/june_title"
        app:layout_constraintEnd_toStartOf="@id/quarter_2_title"
        app:layout_constraintTop_toTopOf="@id/april_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/quarter_2_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_2"
        app:layout_constraintBottom_toBottomOf="@id/june_title"
        app:layout_constraintEnd_toStartOf="@+id/half_year_barrier"
        app:layout_constraintTop_toTopOf="@id/april_title"/>

    <View
        android:id="@+id/quarter_3_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/september_title"
        app:layout_constraintEnd_toStartOf="@id/quarter_3_title"
        app:layout_constraintTop_toTopOf="@id/july_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/quarter_3_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_3"
        app:layout_constraintBottom_toBottomOf="@id/september_title"
        app:layout_constraintEnd_toStartOf="@+id/half_year_barrier"
        app:layout_constraintTop_toTopOf="@id/july_title"/>

    <View
        android:id="@+id/quarter_4_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/december_title"
        app:layout_constraintEnd_toStartOf="@id/quarter_4_title"
        app:layout_constraintTop_toTopOf="@id/october_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/quarter_4_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_4"
        app:layout_constraintBottom_toBottomOf="@id/december_title"
        app:layout_constraintEnd_toStartOf="@+id/half_year_barrier"
        app:layout_constraintTop_toTopOf="@id/october_title"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/half_year_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="half_year_1_divider,half_year_2_divider,half_year_1_title,half_year_2_title"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/half_year_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="half_year_1_divider,half_year_2_divider,half_year_1_title,half_year_2_title"/>

    <View
        android:id="@+id/half_year_1_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/june_title"
        app:layout_constraintEnd_toStartOf="@id/half_year_1_title"
        app:layout_constraintTop_toTopOf="@id/january_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/half_year_1_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_1"
        app:layout_constraintBottom_toBottomOf="@id/june_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/january_title"/>

    <View
        android:id="@+id/half_year_2_divider"
        style="@style/ShortPeriodPickerDividerView"
        app:layout_constraintBottom_toBottomOf="@id/december_title"
        app:layout_constraintEnd_toStartOf="@id/half_year_2_title"
        app:layout_constraintTop_toTopOf="@id/july_title"/>

    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
        android:id="@+id/half_year_2_title"
        style="@style/ShortPeriodPickerNextColumnSbisTextView"
        android:text="@string/quantum_2"
        app:layout_constraintBottom_toBottomOf="@id/december_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/july_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>